* NBP 11.3 * Dependency updates * General code cleanup * remove checkstyle plugin * fix build for recent JDK versions * re-add missing subprojects * remove JAXB annotations